Remove tracked manifest v1 and ignore versioned dataset manifests

--- a/.gitignore
+++ b/.gitignore
@@ -203,7 +203,7 @@ cython_debug/
 datasets/merged_data.csv
 datasets/Countries Data By Aadarsh Vani.csv
 datasets/cultural_distance_matrix.csv
-datasets/manifest.v2.json
+datasets/manifest.v*.json
 datasets/processed/
 .cursorignore
 .cursorindexingignore
