Updated .gitignore with vs code settings

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ dataset_downloads/
 *.parquet
 *.sqlite
 
+# vs code settings
+.vscode/
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
